--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
+  <center>
 <body>
-    <div class=""container">
+  
     <h1>Weather App</h1>
     <input type="text" id="locationInput" placeholder="Enter a city">
     <button id="searchButton">Search</button>
@@ -30,7 +31,7 @@
 
   <script src="script.js"></script>
 </body>
-
+</Center>
   <footer>Weather by Tiffany L. Sharpe</footer>
 
 </html>
