last minute additions and deletions to index.html, style.css and readme files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
   <center>
 <body>
-  
+  <div class="col-md-auto">
+  <div class="container">
     <h1>Weather App</h1>
     <input type="text" id="locationInput" placeholder="Enter a city">
     <button id="searchButton">Search</button>
@@ -24,8 +25,7 @@
       <p id="speed">Wind Speed: --</p>
       <p id="gust">Wind Gust: --</p>
       <img src="nikos world.jpg" style="width:100%;">
-
-
+    </div>
     </div>
   </div>
 
